# attrd

./: .gitignore  Makefile  README.md
pkg/: configure.ac
pkg/files/etc/init.d/: attrd
pkg/src/: Makefile.am  af_attr_client.h  af_attr_def.h  af_profile.h  attr_api.c  attr_common.c  attr_prv.h  attr_script.c  attr_script.h  attr_test.c  attrc.c  attrd.c  attrd_attr.c  attrd_attr.h  make-build-info.sh  profile.c  value_formats.c  value_formats.h
